--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         {% block head %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}" />
+        <link rel="stylesheet" href="style.css" />
         
         <title>Suomen vuosikatsaus</title>
         
@@ -34,7 +34,7 @@
         
         <div id="footer">
             {% block footer %}
-            <p>Tekijät: Mikko Kaipainen, Janne Mäyrä, Riku Kukkaniemi, Viivi Teräväinen</p>
+            <p>Mikko Kaipainen, Janne Mäyrä, Riku Kukkaniemi, Viivi Teräväinen from University of Jyväskylä</p>
             {% endblock %}
         </div>
     </div>
