--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,12 +22,12 @@
         <div id="content">
             <table id="table">
                 <tr>
-                    <th>video</th>
-                    <th>lehtiartikkeli</th>
+                    <td>video</td>
+                    <td>lehtiartikkeli</td>
                 </tr>
                 <tr>
-                    <th>random kuva</th>
-                    <th>sää</th>
+                    <td>random kuva</td>
+                    <td>sää</td>
                 </tr>
             </table>
         </div>
