--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
         <div id="content">
             <table id="table">
                 <tr>
-                    <td>video{{ url }}</td>
+                    <td>{{ url }}</td>
                     <td>lehtiartikkeli</td>
                 </tr>
                 <tr>
