--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,8 @@
         </div>
         
         <div id="content">
-		<div class="yle_areena_player" data-id="{{mid	}}" data-article="{{url}}"></div><script src="http://player.yle.fi/assets/js/embed.js"></script></td>
+		<div class="postimerkki"><img src="{{kuva}}"></div>
+		<div class="yle_areena_player" data-id="{{mid}}" data-article="{{url}}"></div><script src="http://player.yle.fi/assets/js/embed.js"></script>
             <table id="table">
                 <tr>
 
