--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {% block head %}
-        <link rel="stylesheet" href="style.css" />
+        <link type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 
         <title>Suomen vuosikatsaus</title>
 
