--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,8 +27,16 @@
         </div>
 
         <div id="content">
-		<div class="postimerkki"><img src="{{postimerkki_url}}"></div>
-		<div class="yle_areena_player" data-id="{{mid}}" data-article="{{url}}"></div><script src="http://player.yle.fi/assets/js/embed.js"></script>
+            {% if postimerkki_url == '' %}
+            <div class="postimerkki"><p>Ei löytynyt postimerkkiä hakemaltasi vuodelta :-(</p></div>
+            {% else %}
+            <div class="postimerkki"><img src="{{postimerkki_url}}"></div>
+            {% endif %}
+        {% if mid == '' %}
+		    <p>Ei löytynyt videota hakemaltasi vuodelta :-(</p>
+        {% else %}
+            <div class="yle_areena_player" data-id="{{mid}}" data-article="{{url}}"></div><script src="http://player.yle.fi/assets/js/embed.js"></script>
+        {% endif %}
             <table id="table">
                 <tr>
 
