--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,7 @@
         {% else %}
             <div class="yle_areena_player" data-id="{{mid}}" data-article="{{url}}"></div><script src="http://player.yle.fi/assets/js/embed.js"></script>
         {% endif %}
+            <div class="finna"><img src="{{finna_url}}"></div>
             <table id="table">
                 <tr>
 
