--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
             {% if postimerkki_url == '' %}
             <div class="postimerkki"><p>Ei löytynyt postimerkkiä hakemaltasi vuodelta :-(</p></div>
             {% else %}
-            <div class="postimerkki"><img src="{{postimerkki_url}}"></div>
+            <div class="postimerkki"><img src="{{postimerkki_url}}" alt="{{postimerkki_url}}" title="{{postimerkki_nimi}}"></div>
             {% endif %}
         {% if mid == '' %}
 		    <p>Ei löytynyt videota hakemaltasi vuodelta :-(</p>
