finnakuvassa finnarecordiin linkki

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
         {% if finna_url == '' %}
             <p> Finnan kanta ei löytänyt vuotta :-(</p>
         {% else %}
-            <div class="finna"><img src="{{finna_url}}"></div>
+            <div class="finna"><a href="{{finna_record}}"><img src="{{finna_kuva}}"></a></div>
         {% endif %}
             <table id="table">
                 <tr>
