Kokeilin baseen navbarin z-indexiä

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,10 @@
         .affix + .container-fluid {
             padding-top: 90px;
         }
+		
+		.navbar navbar-inverse {
+			z-index: 4;
+		}
     </style>
 </head>
 
