--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,8 @@
             padding-top: 90px;
         }
 		
-		.navbar navbar-inverse {
-			z-index: 4;
+		.navbar {
+			z-index: 10;
 		}
     </style>
 </head>
