baseen lisätty rivi, johon pari saraketta

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,8 +89,20 @@
             {% endif %}
 		</div>
     </div>
+	
+	<div class="row">
+        <div class="col-sm-6">
+			<!-- Tänne voit laittaa mitä haluat -->
+        </div>
+        <div class="col-sm-6">
+			<!-- Tännekin voit laittaa mitä haluat -->
+		</div>
+    </div>
+	
 </div>
+
 </br>
+
 <div class="row">
     <div class="col-sm-12">
         <p>Sivuston tekijät Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
