--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <link type="text/css" href="{{ url_for('static', filename='style.css') }}" /> -->
     <style>
+        .container-fluid .jumbotron {
+            padding-right: 15px;
+            padding-left: 15px;
+            border-radius: 6px;
+        }
+        
+        .jumbotron {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            margin-bottom: 30px;
+            color: inherit;
+            background-color: #eee;
+        }
+        
+        .h1, h1 {
+            font-size: 36px;
+        }
+        
         .affix {
             top: 0;
             width: 100%;
@@ -17,54 +35,79 @@
         .affix + .container-fluid {
             padding-top: 90px;
         }
-		
-		.navbar {
-			z-index: 10;
-		}
-		
-		.col-sm-6 {
-			padding: 1%;
-		}
-		
-		#postimerkki {
-			padding: 0;
-		}
+        
+        .navbar {
+            z-index: 10;
+            padding: 1%;
+            margin-bottom: 20px;
+            border-radius: 4px;
+        }
+        
+        .col-sm-6 {
+            padding: 1%;
+        }
+        
+        #postimerkki {
+            padding: 0;
+        }
+        
+        @media screen and (min-width: 768px) .container .jumbotron, .container-fluid .jumbotron {
+            padding-right: 15px;
+            padding-left: 15px;
+            border-radius: 6px;
+        }
+        
+        @media screen and (min-width: 768px) .jumbotron .h1, .jumbotron h1 {
+            font-size: 42px;
+        }
+        
+        @media (min-width: 768px) .navbar {
+            border-radius: 4px;
+        }
     </style>
 </head>
 
 <body>
-<div class="container-fluid" style="color:#000000;height:200px;">
+<div class="container-fluid" id="otsikko" style="color:#000000;">
     <div class="jumbotron"><h1>SUOMEN VUOSIKATSAUS</h1></div>
 </div>
 
-<div class="navbar navbar-inverse" data-spy="affix" data-offset-top="200">
-    <div class="col-sm-12">
-        <form action="{{ request.base_url }}" method="POST">
-            <div class="row" style="color:#FFFFFF;">Vuosi:</div>
-            <div class="row">
-                <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
-            </div>
-            <div class="row">
-                <input type="number" name="amountInput" value="{{ year }}" min="1917" max="2016"
-                       oninput="this.form.year.value=this.value"/>
-                <input type="submit" name="laheta" value="Hae"/>
-            </div>
-        </form>
+<div class="container-fluid">
+    <div class="navbar navbar-inverse" data-spy="affix" data-offset-top="200">
+        <div class="col-sm-12">
+            <form action="{{ request.base_url }}" method="POST">
+                <div class="row" style="color:#FFFFFF;">Vuosi:
+                    <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
+                </div>
+                <div class="row">
+                    <input type="number" name="amountInput" value="{{ year }}" min="1917" max="2016"
+                        oninput="this.form.year.value=this.value"/>
+                    <input type="submit" name="laheta" value="Hae"/>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6">
-            {% if postimerkki_url == '' %}
-                <p>Ei löytynyt postimerkkiä hakemaltasi vuodelta :-(</p>
+            {% if presidentin_kuva == '' %}
+                <p>Ei löytynyt presidenttiä hakemaltasi vuodelta :-(</p>
             {% else %}
-            {% for merkki in postimerkki_urlit %}
-                <div class="col-sm-6" id="postimerkki"><img class="img-responsive" src="{{ merkki }}" alt="{{ merkki }}" title="{{ postimerkki_tiedot[0] }}"></div>
-            {% endfor %}
+                <img class="img-responsive" src="{{ presidentin_kuva }}" alt="{{ presidentin_nimi }}" title="{{ presidentin_nimi }}">
             {% endif %}
         </div>
+        <div class="col-sm-6">
+            {% if paaministeri_url == '' %}
+                <p>Ei löytynyt pääministeriä hakemaltasi vuodelta :-(</p>
+            {% else %}
+                <img class="img-responsive" src="{{ paaministeri_url }}" alt="{{ paaministeri_nimi }}" title="{{ paaministeri_nimi }}">
+            {% endif %}
+        </div>
+    </div>
 
+    <div class="row">
         <div class="col-sm-6">
             <div class="embed-responsive embed-responsive-16by9">
                 {% if mid == '' %}
@@ -75,8 +118,17 @@
                 {% endif %}
             </div>
         </div>
+        <div class="col-sm-6">
+            {% if postimerkki_url == '' %}
+                <p>Ei löytynyt postimerkkiä hakemaltasi vuodelta :-(</p>
+            {% else %}
+            {% for merkki in postimerkki_urlit %}
+                <div class="col-sm-6" id="postimerkki"><img class="img-responsive" src="{{ merkki }}" alt="{{ merkki }}" title="{{ postimerkki_tiedot[0] }}"></div>
+            {% endfor %}
+            {% endif %}
+        </div>
     </div>
-
+    
     <div class="row">
         <div class="col-sm-6">
             {% if finna_url == '' %}
@@ -86,32 +138,21 @@
             {% endif %}
         </div>
         <div class="col-sm-6">
-			{% if presidentin_kuva == '' %}
-                <p>Ei löytynyt presidenttiä hakemaltasi vuodelta :-(</p>
-            {% else %}
-                <img class="img-responsive" src="{{ presidentin_kuva }}" alt="{{ presidentin_nimi }}" title="{{ presidentin_nimi }}">
-            {% endif %}
-		</div>
-    </div>
-	
-	<div class="row">
-        <div class="col-sm-6">
-			<!-- Tänne voit laittaa mitä haluat -->
+            <!-- Tänne voit laittaa mitä haluat -->
         </div>
-        <div class="col-sm-6">
-			<!-- Tännekin voit laittaa mitä haluat -->
-		</div>
     </div>
-	
+    
 </div>
 
-</br>
+<br/>
 
-<div class="row">
-    <div class="col-sm-12">
-        <p>Sivuston tekijät Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <p>Sivuston tekijät Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
+        </div>
     </div>
 </div>
-	
+    
 </body>
 </html>
