--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -96,7 +96,21 @@
 	
 	<div class="row">
         <div class="col-sm-6">
-			<!-- Tänne voit laittaa mitä haluat -->
+
+            <div id={{ chartID|safe }} class="chart"></div>
+		<script>
+			var chart_id = {{ chartID|safe }}
+			var series = {{ series|safe }}
+			var title = {{ title|safe }}
+			var xAxis = {{ xAxis|safe }}
+			var yAxis = {{ yAxis|safe }}
+            var chart = {{ chart|safe }}
+            var plotOptions = {{ plotOptions|safe }}
+            var tooltip = {{ tooltip|safe  }}
+		</script>
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+			<script src="http://code.highcharts.com/highcharts.js"></script>
+			<script src="../static/main.js" charset="UTF-8"></script>
         </div>
         <div class="col-sm-6">
 			<!-- Tännekin voit laittaa mitä haluat -->
@@ -114,4 +128,4 @@
 </div>
 	
 </body>
-</html>
+</html>
