--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,8 +101,9 @@
             {% endif %}
         </div>
         <div class="col-sm-6">
-
+            <h3>Suomen väestörakenne vuonna {{ year }}</h2>
             <div id={{ chartID|safe }} class="chart"></div>
+            
 		<script>
 			var chart_id = {{ chartID|safe }}
 			var series = {{ series|safe }}
