tyylit omassa tiedostossaan

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,28 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!--<link type="css/text" href="{{ url_for('static', filename='style.css') }}" />-->
-    <style>
-        .affix {
-            top: 0;
-            width: 100%;
-        }
-        .affix + .container-fluid {
-            padding-top: 90px;
-        }
-        
-        .navbar {
-            z-index: 10;
-        }
-        
-        .col-sm-6 {
-            padding: 0.5%;
-        }
-        
-        #postimerkki {
-            padding: 0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../static/style.css" />
 </head>
 
 <body>
