--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,9 +4,9 @@
     <title>Suomen vuosikatsaus</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/style.css" />
 </head>
 
@@ -19,7 +19,7 @@
 <div class="navbar navbar-inverse" data-spy="affix" data-offset-top="200">
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
-            <div class="row" style="color:#FFFFFF;">Vuosi:
+            <div class="row" style="color:#FFFFFF;"><p>Vuosi:</p>
                 <input type="range" name="year" value="{{ year }}" min="1917" max="2016" oninput="this.form.amountInput.value=this.value"/>
             </div>
             <div class="row">
@@ -56,7 +56,7 @@
                     <p>Ei löytynyt videota hakemaltasi vuodelta :-(</p>
                 {% else %}
                     <div class="yle_areena_player" data-id="{{ areena_mid }}" data-article="{{ areena_url }}"></div>
-                    <script src="http://player.yle.fi/assets/js/embed.js"></script>
+                    <script type="text/javascript" src="http://player.yle.fi/assets/js/embed.js"></script>
                 {% endif %}
             </div>
         </div>
@@ -83,7 +83,7 @@
             <h3>Suomen väestörakenne vuonna {{ year }}</h3>
             <div id={{ chartID|safe }} class="chart"></div>
             
-            <script>
+            <script type="text/javascript">
                 var chart_id = {{ chartID|safe }}
                 var series = {{ series|safe }}
                 var title = {{ title|safe }}
@@ -93,9 +93,9 @@
                 var plotOptions = {{ plotOptions|safe }}
                 var tooltip = {{ tooltip|safe  }}
             </script>
-                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-                <script src="http://code.highcharts.com/highcharts.js"></script>
-                <script src="../static/main.js" charset="UTF-8"></script>
+                <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+                <script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
+                <script type="text/javascript" src="../static/main.js" charset="UTF-8"></script>
         </div>
     </div>
     
