--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-<div class="container-fluid" style="height:200px;">
-    <div class="jumbotron"><h1>SUOMEN VUOSIKATSAUS</h1></div>
+<div class="container" style="height:100px;">
+    <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
 
 
-<div class="navbar navbar-inverse" data-spy="affix" data-offset-top="200">
+<div class="navbar navbar-inverse" data-spy="affix" data-offset-top="100">
     <div class="col-sm-12">
         <form action="{{ request.base_url }}" method="POST">
             <div class="row" style="color:#FFFFFF;"><p>Vuosi:</p>
@@ -32,7 +32,7 @@
 </div>
 
 
-<div class="container-fluid">
+<div class="container">
     <h2>Vuonna {{year}}</h2>
     <div class="row">
         <div class="col-sm-6">
