--- a/app/templates/videot.html
+++ b/app/templates/videot.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <div class="row">
         <div class="col-sm-6">
             <h3>julkaistiin mm. tämä video</h3>
             <div class="embed-responsive embed-responsive-16by9">
@@ -11,4 +12,5 @@
                 {% endif %}
             </div>
         </div>
+    </div>
 {% endblock %}
