navi lisätty (about ei toimi vielä)

--- a/app/templates/faktat.html
+++ b/app/templates/faktat.html
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col-sm-6">
-            <h3>Suomen väestörakenne oli tällainen</h3>
+            <h3>Suomen väestörakenne vuonna {{year}}</h3>
             <div id={{ chartID|safe }} class="chart"></div>
 
             <script type="text/javascript">
