--- a/app/templates/kuvat.html
+++ b/app/templates/kuvat.html
@@ -10,7 +10,7 @@
             {% endif %}
         </div>
         <div class="col-sm-6">
-            <h3>julkaistiin mm. nämä postimerkit</h3>
+            <h3>oli tällaisia postimerkkejä</h3>
             {% if postimerkki_url == '' %}
                 <p>Ei löytynyt postimerkkiä hakemaltasi vuodelta :-(</p>
             {% else %}
