--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,22 +29,20 @@
             </div>
         </form>
     </div>
+    <div class="col-sm-12">
+        <ul>
+            <li><a class="active" href="">Faktat</a></li>
+            <li><a href="videot">Videot</a></li>
+            <li><a href="kuvat">Kuvat</a></li>
+            <li><a id ="about" href="about">About</a></li>
+        </ul>
+    </div>
 </div>
 
 
 <div class="container">
     <h2>Vuonna {{year}}</h2>
         {% block content %}{% endblock %}
-</div>
-
-<br/>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
-            <p>Sivuston tekijät Mikko Kaipainen, Riku Kukkaniemi, Janne Mäyrä, Viivi Teräväinen</p>
-        </div>
-    </div>
 </div>
     
 </body>
