--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,10 +31,10 @@
     </div>
     <div class="col-sm-12">
         <ul>
-            <li><a class="active" href="">Faktat</a></li>
+            <li><a class="active" href="/">Faktat</a></li>
             <li><a href="videot">Videot</a></li>
             <li><a href="kuvat">Kuvat</a></li>
-            <li><a id ="about" href="about">About</a></li>
+            <li id ="about"><a href="about">About</a></li>
         </ul>
     </div>
 </div>
