lisää paranteluja naviin

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="container" style="height:100px;">
+<div id="otsikko" class="container" style="height:100px;">
     <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
 
@@ -29,12 +29,13 @@
             </div>
         </form>
     </div>
-    <div class="col-sm-12">
+    <div id="valilehdet" class="col-sm-12">
         <ul>
             <li><a class="active" href="/">Faktat</a></li>
             <li><a href="videot">Videot</a></li>
             <li><a href="kuvat">Kuvat</a></li>
-            <li id ="about"><a href="about">About</a></li>
+            <li id ="about"><a href="ohje">Ohje</a></li>
+            <li id ="about"><a href="about">Tiedot</a></li>
         </ul>
     </div>
 </div>
