--- a/app/static/style.css
+++ b/app/static/style.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 .affix + .container {
-      padding-top: 70px;
+      padding-top: 150px;
 }
 
 .navbar {
@@ -12,6 +12,21 @@
 
 .col-sm-6 {
     padding: 0.5%;
+}
+
+#valilehdet {
+    margin: 0.2% 0 0 0;
+}
+
+h1 {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#otsikko {
+    background-color: #eee;
+    border-radius: 6px; 
+    display: table;
 }
 
 #postimerkki {
@@ -36,6 +51,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    border-radius: 4px; 
 }
 
 li a:hover:not(.active) {
@@ -46,6 +62,7 @@ li a:hover:not(.active) {
 
 .active {
     background-color: #808080;
+    color: #000000;
 }
 
 .active:hover {
@@ -59,4 +76,6 @@ li a:hover:not(.active) {
 }
 
 
-
+@media only screen and (max-width: 768px) {
+    
+}
