--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div id="otsikko" class="container" style="height:100px;">
+<div class="container" id="otsikko" style="height:100px;">
     <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
 
@@ -29,21 +29,14 @@
             </div>
         </form>
     </div>
-    <div id="valilehdet" class="col-sm-12">
-        <ul>
-            <li><a class="active" href="/">Faktat</a></li>
-            <li><a href="videot">Videot</a></li>
-            <li><a href="kuvat">Kuvat</a></li>
-            <li id ="about"><a href="ohje">Ohje</a></li>
-            <li id ="about"><a href="about">Tiedot</a></li>
-        </ul>
-    </div>
+    {% block nav %}{% endblock %}
 </div>
 
 
 <div class="container">
     <h2>Vuonna {{year}}</h2>
         {% block content %}{% endblock %}
+        {% block ohjeModal %}{% endblock %}
 </div>
     
 </body>
