--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,6 +18,10 @@
     margin: 0.2% 0 0 0;
 }
 
+#navi {
+    padding: 0.2% 0.5% 0.2% 0.5%;
+}
+
 h1 {
     display: table-cell;
     vertical-align: middle;
