--- a/app/templates/kuvat.html
+++ b/app/templates/kuvat.html
@@ -6,7 +6,9 @@
             {% if finna_url == '' %}
                 <p> Finnan kanta ei löytänyt vuotta :-(</p>
             {% else %}
-                <a href="{{ finna_record }}"><img class="img-responsive" src="{{ finna_kuva }}" alt="{{ finna_title }}" title="{{ finna_title }}"></a>
+                {% for record in finna_record %}
+                <a href="{{ record }}"><img class="img-responsive" src="{{ finna_kuva[loop.index - 1] }}" alt="{{ finna_title[loop.index - 1] }}" title="{{ finna_title[loop.index - 1] }}"></a>
+                {% endfor %}
             {% endif %}
         </div>
         <div class="col-sm-6">
