--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,12 +13,6 @@
         $("#ex6").on("slide", function(slideEvt) {
             $("#ex6SliderVal").text(slideEvt.value);
         });
-
-        // Without JQuery
-        var slider = new Slider("#ex6");
-        slider.on("slide", function(slideEvt) {
-            $("#ex6SliderVal").text(slideEvt.value);
-        });
     </script>
     <link rel="stylesheet" type="text/css" href="../static/style.css" />
 </head>
@@ -27,7 +21,6 @@
 <div class="container" id="otsikko" style="height:100px;">
     <h1 class="text-center">SUOMEN VUOSIKATSAUS</h1>
 </div>
-
 
 <div id="navi" class="navbar navbar-inverse" data-spy="affix" data-offset-top="100">
     <div class="col-sm-12">
@@ -42,14 +35,34 @@
             </div>
         </form>
     </div>
-    {% block nav %}{% endblock %}
+    <div class="col-sm-12" id="valilehdet">
+        {% block nav %}{% endblock %}
+    </div>
 </div>
 
 
 <div class="container">
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Ohjeita</h4>
+            </div>
+            <div class="modal-body">
+                <p>Tänne voi kirjoittaa, miten sivustoa käytetään :D</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Sulje</button>
+            </div>
+            </div>
+            
+        </div>
+    </div>
     <h2>Vuonna {{year}}</h2>
-        {% block content %}{% endblock %}
-        {% block ohjeModal %}{% endblock %}
+    {% block content %}{% endblock %}
 </div>
     
 </body>
